# mycoflow-core

./: .gitignore  CMakeLists.txt  README.md  docker-compose.bench.yml  docker-compose.qemu.yml  docker-compose.yml  ieee_paper.aux  ieee_paper.fdb_latexmk  ieee_paper.fls  ieee_paper.tex  mycelium_report.tex  mycoflowd-aarch64  questionable.md  test_getifaddrs.c  waveform_com_bufferbloat_test_results_c382b31d-2627-436c-9a7f-8f473428996f.csv  waveform_com_bufferbloat_test_results_f3b9db61-0183-4b58-9471-3c1175dda2dc.csv
.agent/rules/: analyst.md  architect.md  bmad-master.md  bmad-orchestrator.md  dev.md  pm.md  po.md  qa.md  sm.md  ux-expert.md
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
_bmad-output/: problem-solution-2026-04-16.md  project-context.md
_bmad-output/implementation-artifacts/: tech-spec-ebpf-map-read-sense-integration.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
build-aarch64/: CTestTestfile.cmake
build-aarch64/src/: CTestTestfile.cmake  test_act  test_classifier  test_config  test_control  test_device  test_dns  test_ewma  test_hint  test_mangle  test_persona  test_profile  test_rtt  test_service
build-static/: CTestTestfile.cmake
build-static/src/: CTestTestfile.cmake  test_act  test_config  test_control  test_device  test_ewma  test_persona
docker/aarch64-nfct/: Dockerfile
docker/client/: Dockerfile
docker/lab/: Dockerfile  setup.sh
docker/openwrt/: Dockerfile  myco_bridge.lua  myco_bridge.uc  setup.sh
docker/qemu-lab/: Dockerfile  configure-openwrt.sh  setup.sh
docker/router/: Dockerfile  init.sh
docker/traffic/: generate.sh
docs/: 2026-02-16_project_review.md  2026-02-16_sprint_backlog.md  2026-04-23_CPU_and_SafeMode_Optimizations.md  architecture-v3-flow-aware.md  backlog.md  index.md  lab_topology.md  phase1.md  phase2.md  qemu-benchmark-3layer-hints.md  qemu-benchmark-6persona.md  qemu-benchmark.md  sprint-b-adaptive-learning.md
paper/: ieee_tce_mycoflow.bib  ieee_tce_mycoflow.tex  validation_report.tex
poster/: CHANGES.md  POSTER_README.md  README.md  export-pdf.mjs  mycoflow_a1_poster.fdb_latexmk  mycoflow_a1_poster.fls  mycoflow_a1_poster.tex  new-poster.html  poster.html  translate.py
results/: dscp_rules_20260223_181421.txt  dscp_rules_20260223_183215.txt  dscp_rules_20260223_184744.txt  dscp_rules_s3_20260302_230713.txt  dscp_rules_s3_20260302_232155.txt  dscp_rules_s3_20260302_234041.txt  dscp_rules_s3_20260303_000626.txt  dscp_rules_s3_20260303_001111.txt  dscp_rules_s3_20260417_124144.txt  dscp_rules_s3_20260420_094012.txt  ping_aqm_20260222_173212.txt  ping_aqm_20260222_173941.txt  ping_cake6_20260302_232155.txt  ping_cake6_20260302_234041.txt  ping_cake6_20260303_000626.txt  ping_cake6_20260303_001111.txt  ping_cake6_20260417_124144.txt  ping_cake6_20260420_094012.txt  ping_cake_20260223_180605.txt  ping_cake_20260223_181421.txt  ping_cake_20260223_182753.txt  ping_cake_20260223_183100.txt  ping_cake_20260223_183215.txt  ping_cake_20260223_184744.txt  ping_cake_20260302_230713.txt  ping_cake_20260302_232155.txt  ping_cake_20260302_234041.txt  ping_cake_20260303_000626.txt  ping_cake_20260303_001111.txt  ping_cake_20260417_124144.txt  ping_cake_20260420_094012.txt  ping_fifo_20260222_173212.txt  ping_fifo_20260222_173941.txt  ping_fifo_20260223_180605.txt  ping_fifo_20260223_181421.txt  ping_fifo_20260223_182753.txt  ping_fifo_20260223_183100.txt  ping_fifo_20260223_183215.txt  ping_fifo_20260223_184744.txt  ping_fifo_20260302_230713.txt  (+54 more)
results/blind_test/: mode_A_n150_seed42.jsonl  mode_B_n150_seed42.jsonl  resources_modeA.jsonl  resources_modeB.jsonl
results/blind_test_ubuntu/: mode_A_n150_seed42.jsonl  mode_B_n150_seed42.jsonl  resources_modeA.jsonl  resources_modeB.jsonl
results/blind_test_ubuntu_v2/: mode_B_n150_seed42.jsonl
results/phase3_multirun_20260503_013401/: phase3_stats.json  ping_fa0_run1.txt  ping_fa0_run10.txt  ping_fa0_run11.txt  ping_fa0_run12.txt  ping_fa0_run13.txt  ping_fa0_run14.txt  ping_fa0_run15.txt  ping_fa0_run2.txt  ping_fa0_run3.txt  ping_fa0_run4.txt  ping_fa0_run5.txt  ping_fa0_run6.txt  ping_fa0_run7.txt  ping_fa0_run8.txt  ping_fa0_run9.txt  ping_fa1_run1.txt  ping_fa1_run10.txt  ping_fa1_run11.txt  ping_fa1_run12.txt  ping_fa1_run13.txt  ping_fa1_run14.txt  ping_fa1_run15.txt  ping_fa1_run2.txt  ping_fa1_run3.txt  ping_fa1_run4.txt  ping_fa1_run5.txt  ping_fa1_run6.txt  ping_fa1_run7.txt  ping_fa1_run8.txt  ping_fa1_run9.txt  raw_delta_A.txt  raw_delta_B.txt  raw_jitter_B.txt  raw_vpkts_A.txt  raw_vpkts_B.txt  state_fa1_run2.json
results/temporal_split/: temporal_split_report.txt  temporal_split_results.json
results/unicauca/: dns_validation_report.txt  dns_validation_results.csv  persona_summary.csv  validation_report.txt  validation_results.csv
router/: Dockerfile  Dockerfile.router  docker-compose.yml
scripts/: benchmark.sh  cross-bench.sh  docker-bench.sh  multi-app-bench.sh  phase3_multirun.sh  qemu-bench.sh  realworld-bench.sh  run_integration.sh  stress_test.sh
scripts/dataset/: mycoflow_validate.py  mycoflow_validate_dns.py  (+8 more)
src/: CMakeLists.txt  main.c  minunit.h  myco_act.c  myco_act.h  myco_classifier.c  myco_classifier.h  myco_config.c  myco_config.h  myco_control.c  myco_control.h  myco_device.c  myco_device.h  myco_dns.c  myco_dns.h  myco_ebpf.c  myco_ebpf.h  myco_ewma.c  myco_ewma.h  myco_flow.c  myco_flow.h  myco_hint.c  myco_hint.h  myco_log.c  myco_log.h  myco_mangle.c  myco_mangle.h  myco_mark.c  myco_mark.h  myco_netlink.c  myco_netlink.h  myco_persona.c  myco_persona.h  myco_profile.c  myco_profile.h  myco_rtt.c  myco_rtt.h  myco_sense.c  myco_sense.h  myco_service.c  (+5 more)
src/bpf/: mycoflow.bpf.c  mycoflow_rtt.bpf.c
src/tests/: test_act.c  test_classifier.c  test_config.c  test_control.c  test_device.c  test_dns.c  test_ewma.c  test_hint.c  test_mangle.c  test_persona.c  test_profile.c  test_rtt.c  test_service.c
(+38 files in other folders)
